Enhance project and internship details in index.html
Updated project description for Cat vs Dog Image Classifier and added details about internships and certificates.

--- a/index.html
+++ b/index.html
@@ -39,24 +39,27 @@
   <div class="card">
     <h3>Cat vs Dog Image Classifier</h3>
     <p>
-      Built using CNN and Python during NASSCOM virtual internship.
-      The model classifies images of cats and dogs using deep learning techniques.
+    Cat vs Dog Image Classifier (CNN):
+This project is an image classification system based on deep learning using Python and Convolutional Neural Networks (CNN). This system differentiates images into two categories: cat images and dog images using a trained CNN model. The images were preprocessed and then trained using a CNN model with multiple convolution and pooling layers. The trained model was tested on images to check its accuracy and performance. This project has helped me understand computer vision and image preprocessing techniques. This project was done during my NASSCOM virtual internship program.
     </p>
   </div>
 </section>
 
 <section>
-  <h2>Certificates & Internships</h2>
+  <h2>🎓 Certificates & Internships</h2>
   <ul>
-    <li>NASSCOM – AI Virtual Internship</li>
-    <li>Python Programming – GUVI (HCL & Google for Education Partner)</li>
-    <li>Science Day Winner – University Level</li>
+    <li>NASSCOM Virtual Internship (AI & Machine Learning)
+Completed an AI-focused virtual internship where I worked on a CNN-based Cat vs Dog Image Classifier project and gained practical experience in deep learning and computer vision.</li>
+    <li>Python Programming – GUVI (HCL & Google for Education Partner)
+Successfully completed Python training, developing a strong foundation in programming, problem-solving, and basic machine learning concepts.</li>
+    <li>Industrial Visit Certificate – Network Bulls
+Gained exposure to industry-level IT infrastructure, networking concepts, and professional working environments.</li>
   </ul>
 </section>
 
 <section>
   <h2>Contact</h2>
-  <p>Email: yourmail@gmail.com</p>
+  <p>Email: vipinbhardwaj0827@gmail.com</p>
   <p>
     LinkedIn:
     <a href="https://www.linkedin.com/in/vipin-bhardwaj-55a5a93a9" target="_blank">
