Fix image source extension in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <header>
-  <img src="profile.jpg" alt="Vipin Bhardwaj" class="profile-pic" />
+  <img src="profile.jpg.jpeg" alt="Vipin Bhardwaj" class="profile-pic">
   <h1>Vipin Bhardwaj</h1>
   <h3>B.Tech CSE (Artificial Intelligence) Student</h3>
   <p>Aspiring AI Engineer | Python & Deep Learning Enthusiast</p>
