Format footer paragraph for better readability

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@ Gained exposure to industry-level IT infrastructure, networking concepts, and pr
 </section>
 
 <footer>
-  <p>© 2026 Vipin Bhardwaj | Portfolio </p>
+  <p>
+    © 2026 Vipin Bhardwaj | Portfolio
+  </p>
 </footer>
 
 </body>
