--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@ Gained exposure to industry-level IT infrastructure, networking concepts, and pr
 </section>
 
 <footer>
-  <p>
-    © 2026 Vipin Bhardwaj | Portfolio
-  </p>
+<footer>
+  <p>© 2026 Vipin Bhardwaj | Portfolio</p>
+</footer>
+
 </footer>
 
 </body>
